--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2016-07-25
+* MAJOR RELEASE
+* Remove support for build/upload/kickstart from ISO
 2014-11-04
 * support human-friendly size suffixes
 * reorganize isolinux template directory for better support of
